--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.centrale</groupId>
-  <artifactId>project</artifactId>
+  <artifactId>mastermind</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <parent>
@@ -21,7 +21,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>18</maven.compiler.source>
     <maven.compiler.target>18</maven.compiler.target>
-    <exec.mainClass>org.centrale.project.App</exec.mainClass>
+    <exec.mainClass>org.centrale.mastermind.App</exec.mainClass>
   </properties>
 
   <dependencies>
@@ -40,7 +40,7 @@
         <configuration>
           <archive>
             <manifest>
-              <mainClass>org.centrale.project.App</mainClass>
+              <mainClass>org.centrale.mastermind.App</mainClass>
             </manifest>
           </archive>
           <descriptorRefs>
